2007-08-01 Samuel Abels <http://debain.org>

	* lib/TerminalConnection/T*.py: Improved prompt recognition. (#4)

2007-07-17 Samuel Abels <http://debain.org>

	* lib/Exscript/*.py: Check regular expression syntax at compile time.

2007-07-13 Samuel Abels <http://debain.org>

	* exscript.py: Add support for selecting the protocol using -p or
	--protocol.
	* exscript.py: Add support for URL formatted hostnames. (#2)

2007-07-11 Samuel Abels <http://debain.org>

	* lib/WorkQueue/*.py, lib/TerminalActions/*.py: Be more strict with
	the locking. This should not make a difference with the current
	implementation of Python, but that might change in the future.

2007-07-02 Samuel Abels <http://debain.org>

	* all-over: Use new-style classes.
	* lib/Exscript/stdlib/Device.py: Moved set_timeout and set_prompt
	  into new class.
	* lib/Exscript/stdlib/Connection.py (set_timeout, set_prompt): New.
	* lib/Exscript/stdlib/Sys.py (message): New.
	* lib/Exscript/Parser.py: Improved variable initialization.
	* lib/Exscript/Program.py: Dito.
	* lib/Exscript/Scope.py: Dito.
	* lib/Exscript/Code.py: Implemented support for variable assignment.
	* lib/Exscript/Assign.py: New.
	* lib/TerminalTransport/Telnet.py: Cleanups.
	* lib/TerminalActions/Connect.py: Send a notification when connecting.
	* lib/TerminalActions/Authenticate.py: Fix a deadlock that happened when
	  an error occured during authentication.
	* lib/TerminalActions/Authorize.py: Dito.
	* lib/TerminalActions/LoggedSequence.py: Catch logfile errors so that
	  the lock is released even when logging is broken.

2007-06-30 Samuel Abels <http://debain.org>

	* Exscript/*.py: Fix: Runtime error handling was broken when
	compiling two scripts using the same compiler instance.

2007-06-29 Samuel Abels <http://debain.org>

	* Initial release 0.9