@@ -1,6 +1,8 @@
 __all__ = ['Connection',
            'Device',
+           'File',
            'Sys']
 from Connection import *
 from Device     import *
+from File       import *
 from Sys        import *
